--- a/css/slick.css
+++ b/css/slick.css
@@ -2,12 +2,12 @@
 .slider
 {
     position: relative;
-    padding: 0 5em;
+    padding: 10px;
     display: block;
     /* justify-content: center; */
     /* align-items: center; */
     box-sizing: border-box;
-
+    min-width: 0;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
@@ -27,7 +27,7 @@
     display: block;
     overflow: hidden;
 
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 .slick-list:focus
@@ -80,7 +80,7 @@
 {
     display: none;
     float: left;
-
+    margin: 0;
     height: 100%;
     min-height: 1px;
 }
@@ -91,6 +91,7 @@
 .slick-slide img
 {
     display: block;
+    margin: 0 auto;
 }
 .slick-slide.slick-loading img
 {
