--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,33 @@ p{
     padding: 16px 40px; 
 }
 
+.burgundyButton {
+    /* margin-left: 5em ; */
+    background: var(--color-burgundy);
+    color: var(--color-white);
+    font: var(--font-montserrat);
+    padding: 15px 30px;
+    border: var(--color-burgundy);
+    /* font-size: 106%; */
+    /* margin: 0; */
+}
+.burgundyButton:hover {
+    /* margin-left: 5em ; */
+    background: var(--color-burgundy-hover);
+}
+
+.whiteButton {
+    font: var(--font-montserrat);
+    color: var(--color-burgundy);
+    padding: 16px 40px;
+    border: 2px solid var(--color-white);
+}
+.whiteButton:hover {
+    background: var(--color-burgundy);
+    border: 2px solid var(--color-burgundy);
+    color: var(--color-white);
+}
+
 h2{
     font: var(--font-rubik-36);
     color: #150e1f  ;
@@ -82,21 +109,6 @@ header {
 }
 
 
-
-.burgundyButton {
-    /* margin-left: 5em ; */
-    background: var(--color-burgundy);
-    color: var(--color-white);
-    font: var(--font-montserrat);
-    padding: 15px 30px;
-    border: var(--color-burgundy);
-    /* font-size: 106%; */
-    /* margin: 0; */
-}
-.burgundyButton:hover {
-    /* margin-left: 5em ; */
-    background: var(--color-burgundy-hover);
-}
 
 #consultation {
     margin-left: 10px;
@@ -148,17 +160,7 @@ header {
     border: 2px solid var(--color-burgundy);
 }
 
-.whiteButton {
-    font: var(--font-montserrat);
-    color: var(--color-burgundy);
-    padding: 16px 40px;
-    border: 2px solid var(--color-white);
-}
-.whiteButton:hover {
-    background: var(--color-burgundy);
-    border: 2px solid var(--color-burgundy);
-    color: var(--color-white);
-}
+
 
 /* -------------------------headContainer */
 
@@ -338,8 +340,18 @@ body {
     display: flex;
     color: var(--color-white);
     flex-direction: column;
-    margin: 150px 500px;
+    padding: 150px 5em;
+    margin: 150px 0;
     line-height: 1;
+    background: url('/images/background.jpeg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    background-color: #1C1E1C;
+    opacity: 0.68;
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+    height: 100%;
+    
 }
 
 .consultation h2{
@@ -393,8 +405,9 @@ body {
 }
 
 .aboutList{
-    padding: 0 4em;
+    padding: 10px 4em;
     /* display: grid; */
+    margin-bottom: 60px;
  
 }
 #aboutListItem1{
@@ -415,18 +428,58 @@ body {
 }
 /* --------------------------------about  */
 
-/* ------------------------------qrCodes */
+/* -----------------------------------order */
+.order{
+    /* margin-top: 20px; */
+}
 
-.qrCodes{
-
-
-    
+.order button{
+    padding: 16px 40px;
+    border: 2px solid var(--color-burgundy);
+    background: var(--color-white);
 }
 
 
-
+/* -----------------------------------order */
 /* ------------------------------qrCodes */
 
+.qrCodes{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    padding: 0 4em;
+}
+
+    
+
+
+
+
+
+
+
+
+.qrCodesPhotos{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);  
+    background-color: #F3F1F6;  
+    gap: 1em 2em;
+    padding: 100px 4em;
+    }
+
+.qrCodesPhotos img{
+    width: 100%;
+    height: 100%;   
+    padding: 0;
+}    
+.qrCodesMinsport{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 100px;
+    padding: 10px;
+
+    }
+
+/* ------------------------------qrCodes */
 
 
 /* ----------------------------brands */
@@ -444,7 +497,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* padding: 0 5em; */
+    padding: 0 15em;
     font: var(--font-karla);
     color: var(--color-purple);
 }
